@@ -11,6 +11,7 @@
     * enable to search in full or short package names (#46473)
     * fix searching for summary on startup (#49293)
     * rerun search after reloading package list (#49834)
+  o warn on exit if some packages are selected (#45404)
 
 Version 5.17 - 1 June 2009, Thierry Vignaud
 
